--- a/equation.html
+++ b/equation.html
@@ -5,7 +5,7 @@
         <script src="equationver2.js"></script>
     </head>
     <body>
-        
+        Please call function equation(a,b,c);
 <script src="equation.js"></script>
     </body>
 </html>
